# fuelfinder_server_rust

./: .gitignore  Cargo.toml  justfile  requests.http
.sqlx/: query-0853b5ab7edac73216ca8017973fa5a2e48ca25fa61dbf683603a013e03ea1a1.json  query-0a62eb72478777517cb39b7fff55dbab55dc7224a83d47a6f704844c2718e5bc.json  query-168bfae69b069038109213eb296ff2f35fb97b41fe9e927713f4c40b6ab95e98.json  query-31b259e89fb26a736098cbc38b104ea77cee68dad7f022a310e478889134dd2a.json  query-3b064cdd484035704049c6e7efb6848f77c673b69e824477e95a95d9e23a56ea.json  query-3e4fcc2865877d6b8577eac99eafb8bd7297fbc9bc04301fc86d3ee6c838423d.json  query-5951e977fffc5128dce3c39631e7a8edd2159b7a5b55df30aff01ff0628131d8.json  query-6f9ca5a32add08f658362eb6131db6052281d47605e744a190a26668b4081c7b.json  query-781534022a891934376ded4f383cc63336e41c08ebb63dda2c0e0365db55879a.json  query-79e2513c997d5130144f63bd032b23690dbac5cf857e85fa67f87e50d426ac85.json  query-9989813aa042623bbc5e1206ebc8dd065dace36f21bfd0dfe794d9b4adcc420d.json  query-ac2d46ddcbc5af0450c4690d165da173d219d99132196b7f63dc150e7e4ae7bc.json  query-cab70075abe6dd6aa10c29ed608404b4d7729a73144891f3835f66822d1b237a.json  query-cc2e6226da02b8c3e932768e2aed1f98984883f9bf6d8e2ea2ba75f3ec8eddd1.json  query-d496dd5f3104009996726e4a8c2cdedb73370e3918ac860783c21aaee8e4265d.json  query-dbafaceba41eae58e915d1d99157babb8018f62c7a1a98ff3416129fa107869c.json  query-df485a8a1bd4826feef71db1ae8e91aaf7fa2074a853ad8161f82b14d7f533df.json  query-e890c0a26bafb30a2acc0320158f396ae9444747f3f05636bcc10d4d771d1842.json  (+5 more)
migrations/: 20251127153637_create_stations.sql  (+11 more)
(+60 files in other folders)
