[package]
name = "fuelfinder_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
http = "1.0"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util", "timeout"] }
tower-http = { version = "0.6.8", features = [
    "add-extension",
    "trace",
    "cors",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
] }
dotenvy = "0.15"
time = { version = "0.3", features = ["serde", "macros"] }
thiserror = "1.0"
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bacon = "3.20.1"
jsonwebtoken = { version = "10.2.0", features = ["aws_lc_rs"] }
bcrypt = "0.17.1"
